# SecondSight

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  requirements_odroid.txt
.github/workflows/: ci.yml
SecondSight/: Calibration.py  Cameras.py  Color.py  Recorder.py  __init__.py  backend-main.py  config.py  frontend-main.py  logfile  main.py  utils.py
SecondSight/AprilTags/: Detector.py  Manager.py  Positions.py  __init__.py
SecondSight/GamePiece/: Detector.py  Manager.py  Picker.py  PieceConstants.py  Pieces.py  __init__.py
SecondSight/backend/: server.py
SecondSight/frontend/: README.md  server.py
SecondSight/frontend/static/: package-lock.json  package.json
SecondSight/frontend/static/src/: App.js
SecondSight/frontend/static/src/components/Navbar/: NavbarElements.js  index.js
SecondSight/frontend/static/src/pages/: color.js  config.js  index.js  info.js
SecondSight/frontend/templates/: index.html
SecondSight/webserver/: ApriltagAPI.py  Config.py  DEATHSTARE.py  GamePieceAPI.py  MainPage.py  Picker.py  Server.py  __init__.py  server.py
SecondSight/webserver/static/: charuco.tiff  shared.css
SecondSight/webserver/templates/: camera.html  config.html  index.html  picker.html
custom_wheels/: pyntcore-2023.2.1.2-cp310-cp310-linux_aarch64.whl  robotpy_wpinet-2023.2.1.1-cp310-cp310-linux_aarch64.whl  robotpy_wpiutil-2023.2.1.1-cp310-cp310-linux_aarch64.whl
docs/: Install From Scratch.md  Install.md  Networktables.md
docs/config/: cameras.md  detects.md  nt_dest.md
docs/endpoints/: camera_feed.md
docs/endpoints/apriltag/: april_coords.md  pixel_coords.md
docs/endpoints/game_pieces/: cone_2023.md
tests/: README.md  config_helper.py  make_apriltag_cases.py  test_apriltag.py  test_backend.py  test_camera.py  test_config.py  test_gamepiece_manager.py  test_main.py
