[tool.poetry]
name = "SecondSight"
version = "0.0.1"
authors = [
  "Josh Bressers <josh@bress.net>",
  "Colin <cfinn68916@gmail.com>",
  "jli <coderguy50@gmail.com>"
]
description = "A vision system for FRC robotics"
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "SecondSight"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"

#[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
apriltag = "^0.0.16"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
pynetworktables = "^2021.0.0"

[project.urls]
"Homepage" = "https://github.com/Brown-County-FIRST-Robotics/second_sight"
"Bug Tracker" = "https://github.com/Brown-County-FIRST-Robotics/second_sight/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
second-sight = "SecondSight.main:main_cli"
