[tool.poetry]
name = "SecondSight"
version = "0.0.1"
authors = [
  "Josh Bressers <josh@bress.net>",
  "Colin <cfinn68916@gmail.com>",
  "jli <coderguy50@gmail.com>"
]
description = "A vision system for FRC robotics"
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "SecondSight"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
apriltag = "^0.0.16"
numpy = "^1.24.2"
pynetworktables = "^2021.0.0"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
opencv-contrib-python = "^4.7.0"
opencv-python = "^4.7.0"
requests = "^2.31.0"
flask-cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.0"
pytest = "^7.2.2"

[project.urls]
"Homepage" = "https://github.com/Brown-County-FIRST-Robotics/second_sight"
"Bug Tracker" = "https://github.com/Brown-County-FIRST-Robotics/second_sight/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
second-sight = "SecondSight.main:main_cli"
second-sight-frontend = "SecondSight.backend-main:frontend_cli"
second-sight-backend = "SecondSight.backend-main:backend_cli"
second-sight-febe = "SecondSight.backend-main:febe_cli"
make-charuco = "SecondSight.Calibration:makeImage"
show-apriltag-tests = "tests.make_apriltag_cases:displayImages"
